@@ -1,5 +1,10 @@
 2001-12-04  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>
 
+	* config/tc-mips.c (append_insn): Add jump address range overflow
+	check.
+
+2001-12-04  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>
+
 	* config/tc-mips.c (md_parse_option): Fix comment. Allow -mabi option
 	for ELF only.
 	(show): Document -mabi option.
